# Neutral-Physics-Engine

./: .gitignore  CHANGELOG.md  LICENSE  README.md  body.py  forces.py  integrators.py  main.py  pyproject.toml  requirements.txt  setup.py  simulation.py
.github/workflows/: tests.yml
benchmarks/: adaptive_stepping.py  collision_stress.py  hdf5_performance.py  integrator_comparison.py  scaling.py  theta_tradeoff.py
docs/: architecture.md  engineering-decisions.md  limitations.md  performance-analysis.md  project-journey.md
examples/: binary_star_system.py  inner_solar_system.py  random_n_bodies.py  result_analysis.py  sun_earth.py
src/neutral_physics_engine/: analysis.py  body.py  collision.py  gravity_field.py  integrators.py  io.py  main.py  octree.cpp  octree.py  octree_legacy.py  pybind11_wrapper.cpp  simulation.py
tests/: test_body.py  test_collision.py  test_forces.py  test_integrators.py  test_octree.py  test_simulation.py
