[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neutral-physics-engine"
version = "4.0.0"
description = "A high-performance, modular N-body gravitational physics engine for Python. Features Barnes-Hut octree (O(N log N)), Velocity Verlet symplectic integration, adaptive time-stepping, collision resolution, and HDF5 telemetry output. Designed for research, education, and professional celestial mechanics simulations."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Al Ameen" }
]
keywords = ["physics", "n-body", "gravity", "simulation", "barnes-hut", "celestial-mechanics", "hdf5"]

dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "h5py>=3.10",
]

[tool.setuptools.packages.find]
where = ["src"]