[build-system]
requires = ["setuptools>=68", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "neutral-physics-engine"
version = "4.2.0"
description = "A high-performance modular physics engine for Python featuring Barnes-Hut spatial acceleration, adaptive time stepping, collision handling, and HDF5 telemetry."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Al Ameen" }
]
keywords = [
    "physics",
    "simulation",
    "gravity",
    "gravitational-dynamics",
    "barnes-hut",
    "collision-detection",
    "numerical-integration",
    "scientific-computing",
    "celestial-mechanics",
    "hdf5",
]

dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "h5py>=3.10",
]

[tool.setuptools.packages.find]
where = ["src"]